syntax = "proto3";

package proto;

message RobustId {
	fixed64 id = 1;
	fixed64 reply = 2;
}

message RobustMessage {
	RobustId id = 1;
	RobustId session = 2;
	enum RobustType {
		CREATE_SESSION = 0;
		DELETE_SESSION = 1;
		IRC_FROM_CLIENT = 2;
		IRC_TO_CLIENT = 3;
		PING = 4;
		MESSAGE_OF_DEATH = 5;
		CONFIG = 6;
		STATE = 7;
		ANY = 8; // TODO: what is this used for?
	}
	RobustType type = 3;
	string data = 4;

	// TODO: use oneof for the following to save space?
	int64 unix_nano = 5;
	repeated string servers = 6;
	string current_master = 7;
	uint64 client_message_id = 8;
	uint64 revision = 9;
	string remote_addr = 10;
}

message RaftLog {
	uint64 index = 1;
	uint64 term = 2;
	enum LogType {
		COMMAND = 0;
		NOOP = 1;
		ADDPEER = 2;
		REMOVEPEER = 3;
		BARRIER = 4;
	}
	LogType type = 3;
	bytes data = 4;
	bytes extensions = 5;
}
